Correct Error Prone integration docs and build comments
Review follow-ups to documentation and build-script comments:

- Fix a copy-paste hazard in the manual's multi-checker example: the shell
  line-continuation with indentation would inject spaces into the -XepOpt:
  eisopcf:checkers argument. Keep the list on aligned lines with no spaces, and
  note that it is a single argument.
- Correct the decision log's -proc:none claim to match the code fix (the
  environment is registered even under -proc:none), and update the ADRs for the
  arg-list reuse, the context lookup, top-level-only driving, and the
  suppression supersession.
- Note in the release README and decision log that the Maven-publish step must
  run on JDK 21+ and that release_vars.py already sets JAVA_HOME to JAVA_21_HOME.
- Minor wording fixes in the manual, developer notes, example, CHANGELOG, and
  the root build.gradle/settings.gradle comments.